[package]
name = "coders"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
tokio = { version = "1.39.3", features = ["full"] }
reqwest = { version = "0.12.7", features = ["json", "rustls-tls"] }
serde_json = "1.0.127"
anyhow = "1.0.86"
dirs = "5.0.1"